Fixed spacing and facebook alignment

--- a/style.css
+++ b/style.css
@@ -15,11 +15,16 @@ body {
   background: url('/wp-content/themes/mirror_glass/assets/img/tile.jpg') top left repeat;
 }
 
+@font-face {
+  font-family: Museo Std 700;
+  src: url(Museo700-Regular.ttf);
+}
+
 h1,h2,h3,h4,h5,h6 {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-weight: bold;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Museo Std 700", sans-serif;
 }
 
 .thumbnail {
@@ -27,8 +32,15 @@ h1,h2,h3,h4,h5,h6 {
   border: none;
 }
 
+#facebook-link {
+  margin-bottom: 75px;
+}
+
 .thumbnail img {
   border-radius: 10px;
+  height: 190px;
+  width: 290px;
+  margin-top: 55px;
 }
 
 #social-media {
@@ -39,9 +51,13 @@ img {
   position: relative;
 }
 
+#three-images .thumbnail {
+  padding: 50px;
+}
+
 .social-media {
   position: absolute;
-  bottom: 60px;
+  bottom: 10px;
   right: 90px;
   left: 90px;
 }
